--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 </header>
 
 <main>
-    <img src="pic-of-me.png" alt="Me">
+    <img src="pic-of-me.jpg" alt="Me">
     <section class="box" id="main-box">
         Hi, I'm 21 years old and currently studying '<b>Computer Science</b>'
         at KEA.
